--- a/config/user/pages/home.yml
+++ b/config/user/pages/home.yml
@@ -8,7 +8,7 @@ categories:
   - name: 常用网站
     icon: fas fa-star
     sites:
-      - name: 阿虚同学的储物间
+      - name: 阿虚的储物间
         url: https://axutongxue.cn
         icon: fas fa-sitemap
         description: 实用导航
