--- a/config/user/pages/home.yml
+++ b/config/user/pages/home.yml
@@ -10,16 +10,16 @@ categories:
     sites:
       - name: 阿虚的储物间
         url: https://axutongxue.cn
-        icon: fas fa-sitemap
+        icon: far fa-star
         description: 实用导航
       - name: 阿里云中学堂
         url: https://college.aliyun.com
         icon: fas fa-cloud
         description: 阿里云培训中心面向客户提供的集“学-练-测-证”于一体的一站式在线学习与实践平台
-      - name: 河南地矿职业学院
+      - name: 地矿学院
         url: http://www.hagmc.edu.cn
-        icon: fas fa-school
-        description: 河南地矿职业学院官网
+        icon: fas fa-school-flag
+        description: 河南地矿职业学院
       - name: 超星学习通
         url: https://passport2.chaoxing.com/login?fid=&newversion=true&refer=https%3A%2F%2Fi.chaoxing.com
         icon: fas fa-book
